Added bitmap-based shader
Added the possibilty to choose a bitmap based shader to draw with. This
included a re-structuring of how the BrushShader handled added points as
many assumptions related to only using GL_LINES no longer held. The
resulting re-factoring should be easier to extend and easier to use,
notably, the demo interface to the shader only passes down new points to
draw and the line-begin / line-end logic is moved into the BrushShader
where it belongs. This also simplifes adding prediction points.

Added a ByteBuffer management class to handle all the OpenGL buffers
needed for drawing textures.

One included bitmap-based brush is included (spraypaint).

--- a/DemoApp/app/src/main/res/values/strings.xml
+++ b/DemoApp/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="accessibility_brush_red">Red paint color</string>
     <string name="accessibility_brush_green">Green paint color</string>
     <string name="accessibility_brush_blue">Blue paint color</string>
+    <string name="accessibility_brush_normal">Default paint brush</string>
+    <string name="accessibility_brush_spray">Spray paint brush</string>
     <string name="accessibility_prediction">Prediction target in milliseconds</string>
     <string name="accessibility_low_latency_canvas">A low-latency drawing canvas</string>
     <string name="accessibility_regular_canvas">A regular, not low-latency, drawing canvas</string>
